# django-floc-disable

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: release.yml  test-python.yml  test-python.yml 
django_floc_disable/: __init__.py  apps.py  middleware.py
tests/: requirements.txt  test_settings.py  test_urls.py  tests.py
