[tool.poetry]
name = "django-floc-disable"
version = "0.1.0"
description = "Django middleware to disable Google FLoC tracking"
authors = ["Dung Nguyen <contact@dungnt.net>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
